fix: adjust text alignment for container and global elements

--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,6 @@
     padding-right: 0 !important;
     margin-left: auto !important;
     margin-right: auto !important;
-    text-align: left;
-
   }
 }
 
@@ -35,6 +33,17 @@
     min-width: 600px;
     width: 100%;
     padding: 0 1rem;
+    text-align: left !important;
+  }
+
+  /* Fix text alignment for all elements */
+  body, div, p, h1, h2, h3, h4, h5, h6, span, a {
+    text-align: left;
+  }
+
+  /* Keep certain elements centered */
+  .flex.items-center.justify-center, .text-center {
+    text-align: center !important;
   }
 
   /* Fix spacing between elements */
